Optimize .gitignore for better organization
- Reorganize sections for clarity: Virtual environment, environment configuration files, Python compiled files, data files, resource and configuration files, and IDE configurations.
- Add comments for each section to improve readability.
- Ensure proper separation of concerns by grouping related file types together.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,21 @@
-*.log
-*.json
-*.csv
-*.pyc
-.idea
-app/__pycache__
-data
-venv
+# Virtual environment
+venv/
+
+# Environment configuration files
 .env
-logs
+
+# Python compiled files
+*.pyc
+__pycache__/
+
+# Data files
+*.csv
+*.log
+data/
+logs/
+
+# resource and configuration files
+*.json
+
+# IDE configurations
+.idea/
